# NetWiz

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dind  GITHUB_PAGES_SETUP.md  Makefile  PROMPT.md  README.md  TODO.md  activate.sh  build.sh  dind-internal-start.sh  docker-compose.dev.yml  docker-compose.dind.yml  docker-compose.local.yml  docker-compose.mongodb.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh  start.sh
.github/workflows/: build-backend.yml  build-docker.yml  build-frontend.yml  build.yml  deploy-pages.yml  deployment-tests.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  env.example  env.test  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
backend/netwiz_backend/: __init__.py  config.py  controller_abc.py  database.py  git_metadata.py  main.py  models.py  system.py  tools.py
backend/netwiz_backend/auth/: README.md  __init__.py  admin_init.py  controller.py  decorators.py  jwt_utils.py  middleware.py  middleware_auth.py  models.py  repository.py
backend/netwiz_backend/json_tracker/: README.md  __init__.py  create_location_mapping.py  errors.py  helpers.py  self_test.py  tracked_json.py  types.py
backend/netwiz_backend/netlist/: __init__.py  controller.py  models.py  repository.py  routes.py  types.py
backend/netwiz_backend/netlist/core/: README.md  __init__.py  graph.py  json_parser.py  models.py  validation.py
backend/netwiz_backend/netlist/core/validation/: __init__.py  prevalidation.py  rule_check_abc.py  types.py  validation.py
backend/netwiz_backend/netlist/core/validation/rules/: __init__.py  blank_component_name.py  blank_net_name.py  ground_connectivity.py  ground_pin_connectivity.py  misnamed_nets.py  orphaned_nets.py  rule_check_abc.py  unconnected_components.py  unique_component_name.py  unique_name_across_types.py  unique_net_name.py
backend/netwiz_backend/scripts/: README.md  __init__.py  check_metadata.py  generate_openapi.py  health_check.py  sync  sync_metadata.py  test_api.py
backend/netwiz_backend/system/: controller.py  models.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth_decorators.py  test_validation.py
backend/tests/unit/test_json_tracker/: test_locations.py  test_tracked_json.py
backend/tests/unit/test_json_tracker/fixtures/bad/: extra_closing_brace.json  invalid_number_leading_zero.json  single_quotes.json  unterminated_string.json
backend/tests/unit/test_json_tracker/fixtures/good/: biggish.json  mixed_types.json  nested_arrays.json  simple_object.json  unicode_escapes.json
dind/: Dockerfile  README.md  build-and-test.sh  build.sh  dind-internal-start.sh  docker-compose.yml  push.sh  start.sh  test.sh
frontend/: .dockerignore  .eslintrc.cjs  AUTH_README.md  Dockerfile  README.md  env.example  index.html  jest.config.cjs  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/public/test-examples/: auto-fill-example.json  blank-names.json  complex-valid.json  duplicate-names.json  misnamed-ground.json  simple-valid.json
frontend/scripts/: convert-svg-to-png.cjs  convert-svg-to-png.sh  generate-types.sh
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/__tests__/: FileUpload.test.js  NetlistVisualizer.test.js
frontend/src/components/: AuthenticatedAppRouter.tsx  BackendChecker.tsx  NetWizInfo.tsx  VersionInfo.tsx
frontend/src/components/auth/: AuthModal.tsx  ChangePasswordForm.tsx  ProtectedRoute.tsx  SignInForm.tsx  SignUpForm.tsx  UserProfile.tsx  index.ts
frontend/src/components/layout/: NetWizHeader.tsx
frontend/src/components/netlist/: FileUpload.tsx  GraphVisualization.tsx  JsonEditor.tsx  RuleDescriptionModal.tsx  RulesModal.tsx  SubmissionsList.tsx  ValidationPanel.tsx
frontend/src/contexts/: AuthContext.tsx  BasePathContext.tsx
frontend/src/hooks/: index.ts  useNetlistValidation.ts  useTokenRefresh.ts
frontend/src/pages/: AuthDemoPage.tsx  NetlistPage.tsx  SignInPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  auth.ts  global.d.ts  netlist.ts
frontend/src/utils/: authUtils.ts  basePath.ts  index.ts  testExamples.ts  usernameValidation.ts
nginx/: Dockerfile  nginx.conf
tests/e2e/: test_user_workflows.py
tests/integration/: test_full_workflow.py
